--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,7 @@
+apache-beam==2.48.0
 google-cloud-storage==2.9.0
+pandas==1.5.3
 python-binance==1.0.17
 python-dotenv==1.0.0
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
